Added controller and views for errors

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -74,12 +74,14 @@ ru:
   home: "Главная"
   application:
     errors:
+      bad_request: "Плохой запрос (400)."
       forbidden: "Запрещено (403)."
       internal_server_error: "Внутренняя ошибка сервера (500)."
       not_found: "Страница не найдена (404)."
       restricted_access: "Доступ к странице ограничен (401)."
       service_unavailable: "Сервис временно недоступен (503)."
       unauthorized: "Не хватает прав для просмотра страницы (401)."
+      unprocessable_entity: "Сущность нельзя обработать (422)."
     unauthorized:
       title: "Доступ ограничен"
       heading: "Доступ ограничен"
